alignmnet fixed

--- a/public/new/css/myStyle.css
+++ b/public/new/css/myStyle.css
@@ -605,9 +605,6 @@ hr{
     #leadFormText{
         margin-left: -20px
     }
-    #educationalInstitute{
-        margin-top: 80px;
-    }
 
     #sectionOne {
         background-size: 260%;
